# memchr.ml

./: .ocamlformat  LICENSE  README.md  dune-project  memchr.opam
bench/: dune  main.ml
lib/: dune  memchr.ml  memchr.mli  memchr_intf.ml  memchr_stubs.c  runtime.js
test/: dune  test_memchr.ml
